--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/rrpelkma/messengerserver.git"
+    "url": "https://github.com/rrpelkma/messengerserver"
   },
   "author": "Facebook",
   "license": "ISC",
